Updated Professional Section

--- a/Education.html
+++ b/Education.html
@@ -55,18 +55,43 @@
                 <div class="features">
                     <section>
                         <span class="fas fa-user-graduate" style='font-size:24px'></span>
+                        <h3>WorldQuant University</h3>
+                        <p>Applied Data Science Lab <br> Sep - Dec, 2024.</p>
+                    </section>
+                    <section>
+                        <span class="fas fa-user-graduate" style='font-size:24px'></span>
+                        <h3>U.S. Department of State and CRDF Global</h3>
+                        <p>Safeguarding Progress: Addressing Network Vulnerabilities to Secure Research, Data, and Technology <br> Dec, 2024.</p>
+                    </section>
+                    <section>
+                        <span class="fas fa-user-graduate" style='font-size:24px'></span>
+                        <h3>ALX Africa</h3>
+                        <p>AICE - AI Essentials <br> Apr, 2024</p>
+                    </section>
+                    <section>
+                        <span class="fas fa-user-graduate" style='font-size:24px'></span>
                         <h3>Kenyatta University</h3>
-                        <p>Data Science with Python. <br> Jun - Sept, 2022</p>
+                        <p>Data Science with Python <br> Jun - Sept, 2022</p>
                     </section>
                     <section>
                         <span class="fas fa-user-graduate" style='font-size:24px'></span>
                         <h3>ACWICT</h3>
-                        <p>Introduction to Data Science. <br> Jun - Jul, 2022.</p>
+                        <p>Introduction to Data Science <br> Jun - Jul, 2022.</p>
+                    </section>
+                    <section>
+                        <span class="fas fa-user-graduate" style='font-size:24px'></span>
+                        <h3>ICSI</h3>
+                        <p>CyberSecurity Essentials <br> Oct, 2020.</p>
+                    </section>
+                    <section>
+                        <span class="fas fa-user-graduate" style='font-size:24px'></span>
+                        <h3>ICSI</h3>
+                        <p>CNSS Certified Network Security Specialist <br> May, 2020.</p>
                     </section>
                     <section>
                         <span class="fas fa-user-graduate" style='font-size:24px'></span>
                         <h3>KASNEB</h3>
-                        <p>Certifiied Information Communication Technologist (CICT) - Section VI. <br> May, 2014 - Jun, 2018.</p>
+                        <p>Certifiied Information Communication Technologist (CICT) - Section VI <br> May, 2014 - Jun, 2018.</p>
                     </section>
                     <section></section>
                 </div>
