--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <!-- <div class="container">
                     <img src="../images/Chemu.jpg" class="rounded-circle" alt="" width="304" height="236">
                 </div> -->
-                <p>I am a self-driven <b>Data Scientist</b> with the aim of solving real-world challenges by providing technical solutions an individual, business, organization and international levels. I am proficient in conducting data analysis, Exploratory
+                <p>I am a self-driven <b>Data Scientist</b> with the aim of solving real-world challenges by providing technical solutions to an individual, business, organization and international levels. I am proficient in conducting data analysis, Exploratory
                     Data Analysis (EDA), Feature Engineering, Data Preprocesing, and Modelling using supervised and unsupervised learning algorithms. <br> </p>
                 <ul class="actions">
                     <li><a href="#one" class="button scrolly">Learn more</a></li>
@@ -151,7 +151,19 @@
                         <!--<a href="#" class="image"><img src="images/Prosp.png" alt="" data-position="25% 25%" /></a>-->
                         <div class="content">
                             <div class="inner">
-                                <h2>Computer Vision.</h2>
+                                <h2>Exploratory Data Analysis (EDA).</h2>
+                                <ul class="actions">
+                                    <li><a href="Projects.html" class="button">Learn more</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section>
+                        <!--<a href="#" class="image"><img src="images/Prosp.png" alt="" data-position="25% 25%" /></a>-->
+                        <div class="content">
+                            <div class="inner">
+                                <h2>Data Analysis and Visualization.</h2>
                                 <ul class="actions">
                                     <li><a href="Projects.html" class="button">Learn more</a></li>
                                 </ul>
@@ -175,19 +187,7 @@
                         <!--<a href="#" class="image"><img src="images/Prosp.png" alt="" data-position="25% 25%" /></a>-->
                         <div class="content">
                             <div class="inner">
-                                <h2>Exploratory Data Analysis (EDA).</h2>
-                                <ul class="actions">
-                                    <li><a href="Projects.html" class="button">Learn more</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </section>
-
-                    <section>
-                        <!--<a href="#" class="image"><img src="images/Prosp.png" alt="" data-position="25% 25%" /></a>-->
-                        <div class="content">
-                            <div class="inner">
-                                <h2>Data Analysis and Visualization.</h2>
+                                <h2>Computer Vision.</h2>
                                 <ul class="actions">
                                     <li><a href="Projects.html" class="button">Learn more</a></li>
                                 </ul>
