Updated Professional Section

--- a/Education.html
+++ b/Education.html
@@ -43,12 +43,12 @@
                     <section>
                         <span class="fas fa-user-graduate" style='font-size:24px'></span>
                         <h3>Strathmore University</h3>
-                        <p>Master of Science in Computer Based Information Systems. <br> May, 2016 - Jun, 2019.</p>
+                        <p>Master of Science in Computer Based Information Systems <br> May, 2016 - Jun, 2019</p>
                     </section>
                     <section>
                         <span class="fas fa-user-graduate" style='font-size:24px'></span>
                         <h3>University of Nairobi</h3>
-                        <p>Bachelor of Commerce, Business Information Systems (BIS) Option. <br> Sept, 2011 - Dec, 2014.</p>
+                        <p>Bachelor of Commerce, Business Information Systems (BIS) Option <br> Sept, 2011 - Dec, 2014</p>
                     </section>
                 </div>
                 <h2>Professional Qualification</h2>
@@ -56,12 +56,12 @@
                     <section>
                         <span class="fas fa-user-graduate" style='font-size:24px'></span>
                         <h3>WorldQuant University</h3>
-                        <p>Applied Data Science Lab <br> Sep - Dec, 2024.</p>
+                        <p>Applied Data Science Lab <br> Sep - Dec, 2024</p>
                     </section>
                     <section>
                         <span class="fas fa-user-graduate" style='font-size:24px'></span>
                         <h3>U.S. Department of State and CRDF Global</h3>
-                        <p>Safeguarding Progress: Addressing Network Vulnerabilities to Secure Research, Data, and Technology <br> Dec, 2024.</p>
+                        <p>Safeguarding Progress: Addressing Network Vulnerabilities to Secure Research, Data, and Technology <br> Dec, 2024</p>
                     </section>
                     <section>
                         <span class="fas fa-user-graduate" style='font-size:24px'></span>
@@ -76,24 +76,23 @@
                     <section>
                         <span class="fas fa-user-graduate" style='font-size:24px'></span>
                         <h3>ACWICT</h3>
-                        <p>Introduction to Data Science <br> Jun - Jul, 2022.</p>
+                        <p>Introduction to Data Science <br> Jun - Jul, 2022</p>
                     </section>
                     <section>
                         <span class="fas fa-user-graduate" style='font-size:24px'></span>
                         <h3>ICSI</h3>
-                        <p>CyberSecurity Essentials <br> Oct, 2020.</p>
+                        <p>CyberSecurity Essentials <br> Oct, 2020</p>
                     </section>
                     <section>
                         <span class="fas fa-user-graduate" style='font-size:24px'></span>
                         <h3>ICSI</h3>
-                        <p>CNSS Certified Network Security Specialist <br> May, 2020.</p>
+                        <p>CNSS Certified Network Security Specialist <br> May, 2020</p>
                     </section>
                     <section>
                         <span class="fas fa-user-graduate" style='font-size:24px'></span>
                         <h3>KASNEB</h3>
-                        <p>Certifiied Information Communication Technologist (CICT) - Section VI <br> May, 2014 - Jun, 2018.</p>
+                        <p>Certifiied Information Communication Technologist (CICT) - Section VI <br> May, 2014 - Jun, 2018</p>
                     </section>
-                    <section></section>
                 </div>
                 <!--<ul class="actions ">
                     <li><a href="10Alytics.html" class="button ">Learn more</a></li>
