Updated Professional Section

--- a/generic.html
+++ b/generic.html
@@ -37,13 +37,15 @@
 
         <section id="main" class="wrapper">
             <div class="inner">
-                <h2 class="major">Data and AI Specialist, Cyber Shujaag</h2>
+                <h2 class="major">Data and AI Specialist, Cyber Shujaa</h2>
                 <span class="image fit"><img src="images/dataAI.jpg" alt="" /></span>
                 <h3>Activities involved in include:</h3>
                 <ul>
                     <li>Extracted data from a website (web scraping)</li>
                     <li>Performed EDA on the Titanic dataset</li>
                     <li>Visualized data using both Power Bi and Tableau</li>
+                    <!-- <li>Developed a machine learning model to predict the survival of passengers on the Titanic</li> -->
+                    <!-- <li>Created a dashboard to visualize the results of the analysis and model predictions</li -->
                 </ul>
                 <!-- <p>My work experience includes a variety of roles in data science, data entry, and system support. I have worked with various organizations to enhance their data management processes, develop machine learning models, and provide technical support. My expertise includes data preprocessing, analysis, visualization, and the development of interactive dashboards.</p> -->
             </div>
