Added social profile

--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
                         <li><a href="https://chemutai254.github.io/" class="icon brands fa-blogger"><span class="label">Blog</span></a></li>
                         <li><a href="https://www.linkedin.com/in/nancychemutai/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
                         <li><a href="https://www.kaggle.com/chemutai254" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
+                        <li><a href="https://public.tableau.com/app/profile/nancy.chemutai/vizzes" class="icon solid fa-chart-bar"><span class="label">Tableau</span></a></li>
                     </ul>
                 </p>
                 </ul>
