--- a/generic.html
+++ b/generic.html
@@ -11,8 +11,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
+
+
 
 <body class="is-preload">
 
@@ -57,10 +60,10 @@
                 <h2 class="major">Web Researcher/Data Entry Clerk, Heat Intelligence</h2>
                 <span class="image fit"><img src="images/dataAI.jpg" alt="" /></span>
                 <h3>Activities involved in include:</h3>
-                <ul>
-                    <li>Collect relevant data efficiently from various websites to enhance quality and depth of organization insights, streamline processes, and help management make informed decisions gathered from the web</li>
-                    <li>Performed data preprocessing on collected data by handling missing values and data cleaning on the web data before entering them into the system to ensure 99% accuracy</li>
-                    <li>Extract valuable insights from data obtained from various online sites achieving 98% accuracy</li>
+                <ul class="list-item">
+                    <i class="fas fa-check-circle"></i>Collect relevant data efficiently from various websites to enhance quality and depth of organization insights, streamline processes, and help management make informed decisions gathered from the web<br>
+                    <i class="fas fa-check-circle"></i>Performed data preprocessing on collected data by handling missing values and data cleaning on the web data before entering them into the system to ensure 99% accuracy<br>
+                    <i class="fas fa-check-circle"></i>Extract valuable insights from data obtained from various online sites achieving 98% accuracy<br>
                 </ul>
             </div>
         </section>
@@ -71,17 +74,19 @@
                 <span class="image fit"><img src="images/datascience1.webp" alt="" /></span>
                 <p>
                     <h3>Activities involved in include:</h3>
-                    <ul>
-                        <li>Spearheaded the creation of dynamic, data-driven dashboards using Tableau and Power BI, resulting in a 20% increase in sales over a three-month period.</li>
-                        <li>Leveraged Power BI and Tableau to extract, transform, and load (ETL) data from various sources, reducing data integration time by 25%.</li>
-                        <li>Utilized supervised learning models (classification model) to predict diabetes in patients, achieving an accuracy rate of 92% and providing valuable insights for healthcare decision-making.</li>
-                        <li>Implemented unsupervised learning techniques (KMeans) for data clustering, grouping sales data into distinct segments, leading to insights for the marketing department and enhancing decision-making.</li>
-                        <li>Developed a computer vision model using python and OpenCV library to detect face, mouth, and eyes achieving 90% accuracy, Hand Landmarker model and Pose Detection using MediaPipe library with 100% precision.</li>
-                        <li>Developed interactive dashboards addressing business challenges, identifying trends and purchasing behaviours among customers, resulting in data-driven sales decisions and a 20% improvement in targeted marketing.</li>
-                        <li>Conducted thorough data preprocessing, including cleaning, analysis, and forecasting, utilizing advanced Excel features like pivot tables, pivot charts, COUNTIF, VLOOKUP, and INDEX MATCH, resulting in actionable insights and a
-                            25% increase in revenue generation.</li>
-                        <li>Collaborated with cross-functional teams on complex business problems, fostering innovation and improving decision-making processes.</li>
-                        <li>Interpreted findings and trends to evaluate and automate the creation of sales reports, providing essential support to executives and reducing report creation time by 35%.</li>
+                    <ul class="list-item">
+                        <i class="fas fa-check-circle"></i>Spearheaded the creation of dynamic, data-driven dashboards using Tableau and Power BI, resulting in a 20% increase in sales over a three-month period<br>
+                        <i class="fas fa-check-circle"></i>Leveraged Power BI and Tableau to extract, transform, and load (ETL) data from various sources, reducing data integration time by 25%<br>
+                        <i class="fas fa-check-circle"></i>Utilized supervised learning models (classification model) to predict diabetes in patients, achieving an accuracy rate of 92% and providing valuable insights for healthcare decision-making<br>
+                        <i class="fas fa-check-circle"></i>Implemented unsupervised learning techniques (KMeans) for data clustering, grouping sales data into distinct segments, leading to insights for the marketing department and enhancing decision-making<br>
+                        <i class="fas fa-check-circle"></i>Developed a computer vision model using python and OpenCV library to detect face, mouth, and eyes achieving 90% accuracy, Hand Landmarker model and Pose Detection using MediaPipe library with
+                        100% precision<br>
+                        <i class="fas fa-check-circle"></i>Developed interactive dashboards addressing business challenges, identifying trends and purchasing behaviours among customers, resulting in data-driven sales decisions and a 20% improvement in
+                        targeted marketing<br>
+                        <i class="fas fa-check-circle"></i>Conducted thorough data preprocessing, including cleaning, analysis, and forecasting, utilizing advanced Excel features like pivot tables, pivot charts, COUNTIF, VLOOKUP, and INDEX MATCH, resulting
+                        in actionable insights and a 25% increase in revenue generation<br>
+                        <i class="fas fa-check-circle"></i>Collaborated with cross-functional teams on complex business problems, fostering innovation and improving decision-making processes<br>
+                        <i class="fas fa-check-circle"></i>Interpreted findings and trends to evaluate and automate the creation of sales reports, providing essential support to executives and reducing report creation time by 35%<br>
                     </ul>
             </div>
         </section>
@@ -91,11 +96,14 @@
                 <h2 class="major">Data Scientist/Project Lead, Seacrest Technology Limited</h2>
                 <span class="image fit"><img src="images/PolyAnalyst.png" height="500" width="300" /></span>
                 <h3>Activities Involved in include:</h3>
-                <ul>
-                    <li>Delivered an initial prototype (AI model) to the client utilizing text and data analytics, and ML algorithms to cluster data and identify trends, patterns, and anomalies, obtaining insights for operational and procedural improvement.</li>
-                    <li>Performed data loading, pre-processing, data-driven analysis, analyst-driven analysis, and visualization using PolyAnalyst 6.5 on both structured and unstructured data, reporting the outcome in a dashboard.</li>
-                    <li>Performed web-scraping from social sites and visualized the results on the Kenyan map utilizing Google Maps APIs.</li>
-                    <li>Created appropriate documentation that allows stakeholders to understand the steps of the model and duplicate or replicate the model development if necessary.</li>
+                <ul class="list-item">
+                    <i class="fas fa-check-circle"></i>Delivered an initial prototype (AI model) to the client utilizing text and data analytics, and ML algorithms to cluster data and identify trends, patterns, and anomalies, obtaining insights for operational
+                    and procedural improvement<br>
+                    <i class="fas fa-check-circle"></i>Performed data loading, pre-processing, data-driven analysis, analyst-driven analysis, and visualization using PolyAnalyst 6.5 on both structured and unstructured data, reporting the outcome in a
+                    dashboard
+                    <br>
+                    <i class="fas fa-check-circle"></i>Performed web-scraping from social sites and visualized the results on the Kenyan map utilizing Google Maps APIs<br>
+                    <i class="fas fa-check-circle"></i>Created appropriate documentation that allows stakeholders to understand the steps of the model and duplicate or replicate the model development if necessary<br>
                 </ul>
             </div>
         </section>
@@ -105,13 +113,13 @@
                 <h2 class="major">Data Officer (Sub-contactor - MMC Asafo), Safaricom PLC</h2>
                 <span class="image fit"><img src="images/data.png" height="300" width="300" /></span>
                 <h3>Activities involved in include:</h3>
-                <ul>
-                    <li>Ensured 100% success rate for the KYC project (Project Thibitisha) by implementing rigorous verification processes.</li>
-                    <li>Conducted collection and verification of M-Pesa and dealers’ documents achieving a 98% completion rate to ensure the clients submitted all required documents.</li>
-                    <li>Analyzed, scanned, and accurately uploaded the collected documents to Safaricom’s dealer’s portal, maintaining a 99% accuracy rate compared to the checklist.</li>
-                    <li>Performed data entry and cleanup procedures with correctness, achieving 95% accuracy rate, and compiled a detailed report for task documentation.</li>
-                    <li>Formulated data into tables and reports (using Excel VLOOKUP), resulting in a 90% improvement in project progress tracking and transparency.</li>
-                    <li>Successfully matched, merged, and archived documents, ensuring compliance with management-provided guidelines for document organization.</li>
+                <ul class="list-item">
+                    <i class="fas fa-check-circle"></i>Ensured 100% success rate for the KYC project (Project Thibitisha) by implementing rigorous verification processes<br>
+                    <i class="fas fa-check-circle"></i>Conducted collection and verification of M-Pesa and dealers’ documents achieving a 98% completion rate to ensure the clients submitted all required documents<br>
+                    <i class="fas fa-check-circle"></i>Analyzed, scanned, and accurately uploaded the collected documents to Safaricom’s dealer’s portal, maintaining a 99% accuracy rate compared to the checklist<br>
+                    <i class="fas fa-check-circle"></i>Performed data entry and cleanup procedures with correctness, achieving 95% accuracy rate, and compiled a detailed report for task documentation<br>
+                    <i class="fas fa-check-circle"></i>Formulated data into tables and reports (using Excel VLOOKUP), resulting in a 90% improvement in project progress tracking and transparency<br>
+                    <i class="fas fa-check-circle"></i>Successfully matched, merged, and archived documents, ensuring compliance with management-provided guidelines for document organization<br>
                 </ul>
             </div>
         </section>
@@ -122,15 +130,17 @@
                 <h2 class="major">ICT Intern, Amref Health Africa</h2>
                 <span class="image fit"><img src="images/ict.jpg" height="350" width="300" /></span>
                 <h3>Activities involved in inlcude:</h3>
-                <ul>
-                    <li>Achieved 100% effectiveness in maintaining and configuring of ICT infrastructure, strictly adhering to organizational policies and procedures.</li>
-                    <li>Installed and configured users on Microsoft Dynamics and Sun Systems, troubleshooting problems promptly to maintain a 94% user satisfaction.</li>
-                    <li>Performed configuration and troubleshooting of Microsoft Outlook versions (2007, 2010, and 2013), migrating users to Microsoft Outlook365 with a data loss minimization rate of 99% during the migration process.</li>
-                    <li>Configured switches and routers, successfully troubleshooting network issues and providing solutions, resulting in 98% of users having uninterrupted internet access through activation of inactive.</li>
-                    <li>Played a key role in the installation of midwifery e-module content both on mobile and web applications, training users in Kitui, Migori, and Kakamega counties. This initiative positively impacted the performance of health facilities,
-                        enhancing maternal services to local communities.</li>
-                    <li>Executed the installation of Operating Systems (Windows 10), Microsoft Office 2013, and McAfee antivirus 2018, to ensuring 100% user protection from malware.</li>
-                    <li>Set up conference calls using Cisco phones (model 3306), contributing to seamless communication experience for all involved parties.</li>
+                <ul class="list-item">
+                    <i class="fas fa-check-circle"></i>Achieved 100% effectiveness in maintaining and configuring of ICT infrastructure, strictly adhering to organizational policies and procedures<br>
+                    <i class="fas fa-check-circle"></i>Installed and configured users on Microsoft Dynamics and Sun Systems, troubleshooting problems promptly to maintain a 94% user satisfaction<br>
+                    <i class="fas fa-check-circle"></i>Performed configuration and troubleshooting of Microsoft Outlook versions (2007, 2010, and 2013), migrating users to Microsoft Outlook365 with a data loss minimization rate of 99% during the migration
+                    process
+                    <br>
+                    <i class="fas fa-check-circle"></i>Configured switches and routers, successfully troubleshooting network issues and providing solutions, resulting in 98% of users having uninterrupted internet access through activation of inactive<br>
+                    <i class="fas fa-check-circle"></i>Played a key role in the installation of midwifery e-module content both on mobile and web applications, training users in Kitui, Migori, and Kakamega counties. This initiative positively impacted
+                    the performance of health facilities, enhancing maternal services to local communities<br>
+                    <i class="fas fa-check-circle"></i>Executed the installation of Operating Systems (Windows 10), Microsoft Office 2013, and McAfee antivirus 2018, to ensuring 100% user protection from malware<br>
+                    <i class="fas fa-check-circle"></i>Set up conference calls using Cisco phones (model 3306), contributing to seamless communication experience for all involved parties<br>
                 </ul>
             </div>
         </section>
@@ -140,13 +150,13 @@
                 <h2 class="major">System Support Officer, Prosperity Solutions Int. Ltd.</h2>
                 <span class="image fit"><img src="images/sup.jpg" height="350" width="300" /></span>
                 <h3>Activities involved in inlcude:</h3>
-                <ul>
-                    <li>Conducted thorough performance evaluation of existing systems, identifying and implementing customizations that improved data performance by 15%.</li>
-                    <li>Played a key role in troubleshooting Health Application Information Systems (HAIS) application issues, achieving a 90% resolution rate within established timelines.</li>
-                    <li>Delivered comprehensive assistance to system users of insurance companies, responding to queries and issues with 95% satisfaction rate.</li>
-                    <li>Executed software installations on user computers, ensuring a 100% success rate in deployment and configuration.</li>
-                    <li>Provided technical support during the resolution of production problems, contributing to a 90% reduction in system downtime.</li>
-                    <li>Supported customers in a technical help desk environment, focusing on first-call problem resolution and achieving an 75% resolution rate with the initial call.</li>
+                <ul class="list-item">
+                    <i class="fas fa-check-circle"></i>Conducted thorough performance evaluation of existing systems, identifying and implementing customizations that improved data performance by 15%<br>
+                    <i class="fas fa-check-circle"></i>Played a key role in troubleshooting Health Application Information Systems (HAIS) application issues, achieving a 90% resolution rate within established timelines<br>
+                    <i class="fas fa-check-circle"></i>Delivered comprehensive assistance to system users of insurance companies, responding to queries and issues with 95% satisfaction rate<br>
+                    <i class="fas fa-check-circle"></i>Executed software installations on user computers, ensuring a 100% success rate in deployment and configuration<br>
+                    <i class="fas fa-check-circle"></i>Provided technical support during the resolution of production problems, contributing to a 90% reduction in system downtime<br>
+                    <i class="fas fa-check-circle"></i>Supported customers in a technical help desk environment, focusing on first-call problem resolution and achieving an 75% resolution rate with the initial call<br>
                 </ul>
             </div>
         </section>
