--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 
@@ -56,7 +57,7 @@
                 <div class="content">
                     <div class="inner">
                         <h2>Data and AI Specialist</h2>
-                        <p> Cyber Shujaa | Nairobi, Kenya | May. 2025 to Date.</p>
+                        <p> Cyber Shujaa | Nairobi, Kenya | May. 2025 to Date</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
                         </ul>
@@ -69,7 +70,7 @@
                 <div class="content">
                     <div class="inner">
                         <h2>Web Researcher/Data Entry Officer (Part-time)</h2>
-                        <p> Heat Intelligence | Israel, Remote | Jun. 2022 to Date.</p>
+                        <p> Heat Intelligence | Israel, Remote | Jun. 2022 to Date</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
                         </ul>
@@ -82,7 +83,7 @@
                 <div class="content">
                     <div class="inner">
                         <h2>Data Scientist</h2>
-                        <p>10Alytics | Alberta, Canada - Remote | Aug. 2023 to Jan. 2024.</p>
+                        <p>10Alytics | Alberta, Canada - Remote | Aug. 2023 to Jan. 2024</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
                         </ul>
@@ -95,7 +96,7 @@
                 <div class="content">
                     <div class="inner">
                         <h2>Data Scientist</h2>
-                        <p>Seacrest Technology Limited | Nairobi, Kenya | Jan. to Jul. 2023.</p>
+                        <p>Seacrest Technology Limited | Nairobi, Kenya | Jan. to Jul. 2023</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
                         </ul>
@@ -108,7 +109,7 @@
                 <div class="content">
                     <div class="inner">
                         <h2>Data Officer</h2>
-                        <p>Safaricom PLC (Subcontractor, MMC Asafo) | Nairobi, Kenya | Aug. 2019 - Feb. 2020.</p>
+                        <p>Safaricom PLC (Subcontractor, MMC Asafo) | Nairobi, Kenya | Aug. 2019 - Feb. 2020</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
                         </ul>
@@ -120,7 +121,7 @@
                 <div class="content">
                     <div class="inner">
                         <h2>ICT Intern</h2>
-                        <p>Amref Health Africa | Nairobi, Kenya | Jan. 2018 - Jun. 2018.</p>
+                        <p>Amref Health Africa | Nairobi, Kenya | Jan. 2018 - Jun. 2018</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
                         </ul>
@@ -132,7 +133,7 @@
                 <div class="content">
                     <div class="inner">
                         <h2>System Support Officer</h2>
-                        <p>Prosperity Solutions Int. Ltd. | Nairobi, Kenya | Jul. 2015 - Jul. 2016.</p>
+                        <p>Prosperity Solutions Int. Ltd. | Nairobi, Kenya | Jul. 2015 - Jul. 2016</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
                         </ul>
@@ -151,7 +152,7 @@
                         <!--<a href="#" class="image"><img src="images/Prosp.png" alt="" data-position="25% 25%" /></a>-->
                         <div class="content">
                             <div class="inner">
-                                <h2>Exploratory Data Analysis (EDA).</h2>
+                                <h2>Exploratory Data Analysis (EDA)</h2>
                                 <ul class="actions">
                                     <li><a href="Projects.html" class="button">Learn more</a></li>
                                 </ul>
@@ -163,7 +164,7 @@
                         <!--<a href="#" class="image"><img src="images/Prosp.png" alt="" data-position="25% 25%" /></a>-->
                         <div class="content">
                             <div class="inner">
-                                <h2>Data Analysis and Visualization.</h2>
+                                <h2>Data Analysis and Visualization</h2>
                                 <ul class="actions">
                                     <li><a href="Projects.html" class="button">Learn more</a></li>
                                 </ul>
@@ -175,19 +176,21 @@
                         <!--<a href="#" class="image"><img src="images/Prosp.png" alt="" data-position="25% 25%" /></a>-->
                         <div class="content">
                             <div class="inner">
-                                <h2>Machine Learning.</h2>
+                                <h2>Machine Learning</h2>
                                 <ul class="actions">
                                     <li><a href="Projects.html" class="button">Learn more</a></li>
                                 </ul>
                             </div>
                         </div>
                     </section>
-
+                    <!-- <i class="fas fa-check-circle"></i><br>
+                    <i class="fas fa-check-circle"></i><br>
+                    <i class="fas fa-check-circle"></i><br>-->
                     <section>
-                        <!--<a href="#" class="image"><img src="images/Prosp.png" alt="" data-position="25% 25%" /></a>-->
+                        <!-- <a href="#" class="image"><img src="images/Prosp.png" alt="" data-position="25% 25%" /></a> -->
                         <div class="content">
                             <div class="inner">
-                                <h2>Computer Vision.</h2>
+                                <h2>Computer Vision</h2>
                                 <ul class="actions">
                                     <li><a href="Projects.html" class="button">Learn more</a></li>
                                 </ul>
