--- a/Projects.html
+++ b/Projects.html
@@ -61,13 +61,7 @@
                 </ul>
             </p>
 
-            <p>The Netflix dataset was wrangled by adhering to the data wrangling process: discovering, structuring, cleaning, enriching, and validation. The discovering process entailed the querying of data to identify discrepancies. There was presence
-                of missing values in director, cast, country, date_added, rating, and duration columns. The percentage of missing values in each column include director - 29.90%, cast - 9.37%, country - 9.43%, date_added - 0.11%, rating: - 0.05%, and
-                duration - 0.03%. The column date_added was a string instead of a datetime datatype. In structuring stage, the date_added column was converted to datetime datatype from a string. The duration column was also split into two columns namely
-                duration_value and duration_unit where the value took a numeric datatype and unit a string. During cleaning, the description column was dropped since it was rendered irrelevant in the analysis. The missing columns director, cast, and country
-                were imputed whereby the missing values were filled in relation to each other. The three columns accounted for a reasonable percentage thus could not be dropped. However, the date_added, rating, and duration missing values were dropped
-                since they could not impact the dataset. Enriching was done to ensure that the data utilized was within range i.e. after 1997. Thereafter, validation was conducted to ensure that the above-mentioned discrepancies were handled. The clean
-                dataset was exported as a .csv file as seen in this <a href="https://www.kaggle.com/code/chemutai254/netflix-data-wrangling"><i>link</i></a></p>
+            <p>The clean dataset was exported as a .csv file as seen in this <a href="https://www.kaggle.com/code/chemutai254/netflix-data-wrangling"><i>link</i></a></p>
         </div>
 
     </section>
